# pythonings

./: README.md  pyproject.toml
src/pythonings/: ex01_intertools.py  ex02_collections.py  ex03_contextlib.py  ex04_functools.py  ex05_pathlib.py  ex06_subprocess_concurrent.py  ex07_comprehension_unpackaging.py  ex08_performance_bisect_memoryview.py  ex09_decorators_generators.py  ex10_debugging_logging.py  ex11_antipatterns_gotchas.py  ex12_multiple_inheritance_di.py
src/tests/: test_01_itertools.py  test_02_collections.py  test_03_contextlib.py  test_04_functools.py  test_05_pathlib.py  test_06_subprocess_concurrent.py  test_07_comprehensions_unpacking.py  test_08_performance_bisect_memoryview.py  test_09_decorators_generators.py  test_10_debugging_logging.py  test_11_antipatterns_gotchas.py  test_12_multiple_inheritance_di.py
