[project]
name = "pythonings"
version = "0.1.0"
description = "Zigling style, but for advanced Python"
readme = "README.md"
authors = [
    { email = "mrtcnozdemir@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "hatch"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pythonings"]

[tool.hatch.envs.default]
python-path = ["src"]
dependencies = [
    "pytest",
    "pytest-cov",     
    "hatch" 
]

[tool.pytest.ini_options]
testpaths = [
    "src/tests"
]
